# sycl-test

./: .gitignore  CMakeLists.txt  Makefile.Win  a_plus_b_init_on_dev.cpp  notes.txt  simple_codeplay_sycl_app.cpp  start_computing.cpp  sycl_device.cpp
intel-doc-conf-sample/: CMakeLists.txt  compilation.txt  simple.cpp
src/: CMakeLists.txt  a_plus_b.cpp  a_plus_b_init_on_dev.cpp  create_and_add_buffers.cpp  environment_query.cpp  hello_world.cpp  my_timer.hpp  sycl_device.cpp
src/lib/: CMakeLists.txt  my_axpy_sycl.cpp  my_axpy_sycl.h
